--- a/www.transmediale.de/tm2k12/index.html
+++ b/www.transmediale.de/tm2k12/index.html
@@ -6,13 +6,13 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>in/compatible | transmediale</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="shortcut icon" href="files/ninesixty_favicon_1.gif" type="image/x-icon" />
-  <link type="text/css" rel="stylesheet" media="all" href="files/css/css_4629a4f5c568eea6a5e2ab7ce2cc5129.css" />
+<link rel="shortcut icon" href="/files/ninesixty_favicon_1.gif" type="image/x-icon" />
+  <link type="text/css" rel="stylesheet" media="all" href="/files/css/css_4629a4f5c568eea6a5e2ab7ce2cc5129.css" />
   <!--[if IE]>
     <link rel="stylesheet" href="/sites/www.transmediale.de/themes/ninesixty/styles/tm11/ekn-ie.css" type="text/css">
   <![endif]-->
 
-  <script type="text/javascript" src="files/js/js_f9d3b7f3a2ea48f6d4adfc60022d894f.js"></script>
+  <script type="text/javascript" src="/files/js/js_f9d3b7f3a2ea48f6d4adfc60022d894f.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|arc|arj|asf|asx|avi|bin|csv|doc|exe|flv|gif|gz|gzip|hqx|jar|jpe?g|js|mp(2|3|4|e?g)|mov(ie)?|msi|msp|pdf|phps|png|ppt|qtm?|ra(m|r)?|sea|sit|tar|tgz|torrent|txt|wav|wma|wmv|wpd|xls|xml|z|zip" }, "lightbox2": { "rtl": "0", "file_path": "/(\\w\\w/)files", "default_image": "/sites/all/modules/lightbox2/images/brokenimage.jpg", "border_size": 10, "font_color": "000", "box_color": "fff", "top_position": "", "overlay_opacity": "0.8", "overlay_color": "000", "disable_close_click": true, "resize_sequence": 0, "resize_speed": 400, "fade_in_speed": 400, "slide_down_speed": 600, "use_alt_layout": false, "disable_resize": false, "disable_zoom": false, "force_show_nav": false, "show_caption": true, "loop_items": false, "node_link_text": "View Image Details", "node_link_target": false, "image_count": "Image !current of !total", "video_count": "Video !current of !total", "page_count": "Page !current of !total", "lite_press_x_close": "press \x3ca href=\"#\" onclick=\"hideLightbox(); return FALSE;\"\x3e\x3ckbd\x3ex\x3c/kbd\x3e\x3c/a\x3e to close", "download_link_text": "", "enable_login": false, "enable_contact": false, "keys_close": "c x 27", "keys_previous": "p 37", "keys_next": "n 39", "keys_zoom": "z", "keys_play_pause": "32", "display_image_size": "original", "image_node_sizes": "()", "trigger_lightbox_classes": "", "trigger_lightbox_group_classes": "", "trigger_slideshow_classes": "", "trigger_lightframe_classes": "", "trigger_lightframe_group_classes": "", "custom_class_handler": 0, "custom_trigger_classes": "", "disable_for_gallery_lists": true, "disable_for_acidfree_gallery_lists": true, "enable_acidfree_videos": true, "slideshow_interval": 5000, "slideshow_automatic_start": true, "slideshow_automatic_exit": true, "show_play_pause": true, "pause_on_next_click": false, "pause_on_previous_click": true, "loop_slides": false, "iframe_width": 600, "iframe_height": 400, "iframe_border": 1, "enable_video": false }, "views": { "ajax_path": "/views/ajax", "ajaxViews": [ { "view_name": "festival_content", "view_display_id": "page_1", "view_args": "", "view_path": "festival/theme", "view_base_path": "festival/theme", "view_dom_id": 1, "pager_element": 0 } ] }, "langDropdown": { "jsWidget": { "visibleRows": "5", "rowHeight": "23", "animStyle": "slideDown" } } });
@@ -172,11 +172,11 @@ function switchLoginForm() {
 <div class="field field-type-filefield field-field-festival-image">
     <div class="field-items">
             <div class="field-item odd first">
-                    <a href="http://www.transmediale.de/content/transmediale-2012-programme-overview" class="imagecache imagecache-tm_small imagecache-linked imagecache-tm_small_linked"><img src="files/imagecache/tm_small/twins.jpg" alt="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still" title="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still"  class="imagecache imagecache-tm_small" width="160" height="122" /></a>        </div>
+                    <a href="http://www.transmediale.de/content/transmediale-2012-programme-overview" class="imagecache imagecache-tm_small imagecache-linked imagecache-tm_small_linked"><img src="/files/imagecache/tm_small/twins.jpg" alt="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still" title="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still"  class="imagecache imagecache-tm_small" width="160" height="122" /></a>        </div>
                 <div class="field-item even further">
-                        <a href="http://www.transmediale.de/content/transmediale-2012-programme-overview" class="imagecache imagecache-tm_small imagecache-linked imagecache-tm_small_linked"><img src="files/imagecache/tm_small/twins.jpg" alt="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still" title="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still"  class="imagecache imagecache-tm_small" width="160" height="122" /></a>          </div>
+                        <a href="http://www.transmediale.de/content/transmediale-2012-programme-overview" class="imagecache imagecache-tm_small imagecache-linked imagecache-tm_small_linked"><img src="/files/imagecache/tm_small/twins.jpg" alt="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still" title="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still"  class="imagecache imagecache-tm_small" width="160" height="122" /></a>          </div>
                   <div class="field-item odd further">
-                        <a href="http://www.transmediale.de/content/transmediale-2012-programme-overview" class="imagecache imagecache-tm_small imagecache-linked imagecache-tm_small_linked"><img src="files/imagecache/tm_small/twins.jpg" alt="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still" title="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still"  class="imagecache imagecache-tm_small" width="160" height="122" /></a>          </div>
+                        <a href="http://www.transmediale.de/content/transmediale-2012-programme-overview" class="imagecache imagecache-tm_small imagecache-linked imagecache-tm_small_linked"><img src="/files/imagecache/tm_small/twins.jpg" alt="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still" title="20010 by Giordano Matteo, video © Giordano Matteo 2011 | film still"  class="imagecache imagecache-tm_small" width="160" height="122" /></a>          </div>
           </div>
 </div>
 
@@ -266,7 +266,7 @@ function switchLoginForm() {
 <div id="block-block-238" class="block block-block imageblock">
 
   <div class="content">
-    <div style="height: 202px;"><a href="http://www.transmediale.de/node/20253/"><img src="files/web/jls2.png" width="300px" border="0" /></a></div>
+    <div style="height: 202px;"><a href="http://www.transmediale.de/node/20253/"><img src="/files/web/jls2.png" width="300px" border="0" /></a></div>
 <div class="goldheader"><a href="http://www.transmediale.de/node/20253/">Joshua Light Show</a></div>
 <div class="blue">The legendary, hypnotic and colourful 1960s <i>Joshua Light Show</i> will perform alongside contemporary musicians as part of transmediale 2012 and CTM.12, combining analogue with modern digital visual experimentation, presenting their analogue show in Europe for the first time since the 1960's.</div>
   </div>
@@ -313,7 +313,7 @@ USt.-ID-Nr.: DE 137180214 | <a href="http://www.transmediale.de/about/imprint">m
 <div id="block-block-70" class="block block-block">
 
   <div class="content">
-    <p><img src="files/web/logos-sponsoren.png" alt="Main sponsors" width="220px" /></p>
+    <p><img src="/files/web/logos-sponsoren.png" alt="Main sponsors" width="220px" /></p>
   </div>
 </div>
       </div>
